src/parser/snapshots/enderpy__parser__parser__tests__parse_assignment-30.snap
---
source: src/parser/parser.rs
description: "a: int = 1, 2"
---
Module {
    node: Node {
        start: 0,
        end: 13,
    },
    body: [
        AnnAssignStatement(
            AnnAssign {
                node: Node {
                    start: 0,
                    end: 13,
                },
                target: Name(
                    Name {
                        node: Node {
                            start: 0,
                            end: 1,
                        },
                        id: "a",
                    },
                ),
                annotation: Name(
                    Name {
                        node: Node {
                            start: 3,
                            end: 6,
                        },
                        id: "int",
                    },
                ),
                value: Some(
                    Tuple(
                        Tuple {
                            node: Node {
                                start: 9,
                                end: 13,
                            },
                            elements: [
                                Constant(
                                    Constant {
                                        node: Node {
                                            start: 9,
                                            end: 10,
                                        },
                                        value: Int(
                                            "1",
                                        ),
                                    },
                                ),
                                Constant(
                                    Constant {
                                        node: Node {
                                            start: 12,
                                            end: 13,
                                        },
                                        value: Int(
                                            "2",
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                ),
                simple: true,
            },
        ),
    ],
}
